[package]
name = "polyglot"
version = "0.1.0"
authors = ["Sam Tay <sam.chong.tay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.6"
rand = "0.8.5"

[features]
nightly = []

[[bin]]
name = "rule110"
path = "src/rule110.rs"
